--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  justify-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  font-size: 20px;
+
+  margin: 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputWrapper {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+  justify-content: space-between;
+
+  width: 400px;
+  height: 30px;
+}
+
+input {
+  width: 350px;
+  height: 30px;
+}
+
+button {
+  width: 40px;
+  height: 30px;
+
+  text-align: center;
+}
+
+.result {
+  width: 80%;
+  height: 300px;
+
+  overflow: scroll;
+
+  margin-top: 30px;
+
+  border: 1px solid black;
 }
